implement infinite-scroll

--- a/src/Style/Main.scss
+++ b/src/Style/Main.scss
@@ -3,5 +3,7 @@
 @import './Base/Minxins';
 @import './Base/Reset';
 
+@import './Components/Container';
+
 @import './Page/Home';
 @import './Page/404';
