--- a/src/Style/Page/_Home.scss
+++ b/src/Style/Page/_Home.scss
@@ -9,7 +9,7 @@
 .home__grid {
     margin-top: 50px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(288px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     justify-content: center;
     grid-gap: 32px 20px;
 
@@ -17,17 +17,34 @@
         border-radius: 10px;
         box-shadow: 0 0 16px #e5e5e5;
         position: relative;
+        transform: scale(0.97);
+
+        &:hover {
+            transition: 0.5s;
+            transform: scale(1);
+
+            .home__grid__item__content__image {
+                transition: 0.5s;
+                transform: scale(1);
+            }
+        }
     }
 
     &__item__save {
         z-index: 90;
-        background-color: red;
         position: absolute;
         top: 0;
         right: 0;
-        padding: 18px;
+        padding: 8px;
         border: 1px solid #e5e5e5;
-        border-radius: 0 10px 0 0;
+        border-radius: 0 10px 0 10px;
+        cursor: pointer;
+        background: transparent;
+
+        &:hover {
+            background-color: red;
+            transition: .5s;
+        }
 
         >img {
             width: 21px;
@@ -47,9 +64,19 @@
         font-weight: 500;
         font-size: 21px;
 
-        >img {
+        &__image {
             height: 96px;
             width: 96px;
+            transform: scale(0.75);
+
+            // transform: scale(0.75);
+
+            // &:hover {
+            //     transition: 0.5s;
+            //     transform: scale(1);
+            // }
         }
+
+
     }
 }
