--- a/src/Style/Main.scss
+++ b/src/Style/Main.scss
@@ -4,6 +4,7 @@
 @import './Base/Reset';
 
 @import './Components/Container';
+@import './Components/Layout';
 
 @import './Page/Home';
 @import './Page/404';
