--- a/src/Style/Main.scss
+++ b/src/Style/Main.scss
@@ -5,6 +5,7 @@
 
 @import './Components/Container';
 @import './Components/Layout';
+@import './Components/Alert';
 
 @import './Page/Home';
 @import './Page/404';
