--- a/src/Style/Main.scss
+++ b/src/Style/Main.scss
@@ -3,6 +3,8 @@
 @import './Base/Minxins';
 @import './Base/Reset';
 
+@import './Vendor/ReactModal';
+
 @import './Components/Container';
 @import './Components/Layout';
 @import './Components/Alert';
