--- a/src/Style/Page/_404.scss
+++ b/src/Style/Page/_404.scss
@@ -20,16 +20,27 @@
             font-size: 7.5em;
             margin: 15px 0px;
             font-weight: bold;
+
+            @include for-size(phone) {
+                font-size: 3.5em;
+            }
         }
 
         >span:nth-child(2) {
             font-weight: bold;
             font-size: 2rem;
 
+            @include for-size(phone) {
+                font-size: 1rem;
+            }
         }
 
         >span:nth-child(3) {
             font-size: 1rem;
+
+            @include for-size(phone) {
+                font-size: 0.5;
+            }
         }
     }
 
