--- a/src/Style/Main.scss
+++ b/src/Style/Main.scss
@@ -8,6 +8,7 @@
 @import './Components/Container';
 @import './Components/Layout';
 @import './Components/Alert';
+@import './Components/ModalNickName';
 
 @import './Page/Home';
 @import './Page/Detail';
